# plugin-nautobot

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.cfg
nautobot_graph/: __init__.py  admin.py  banner.py  datasources.py  filter_extensions.py  filters.py  forms.py  homepage.py  jobs.py  metrics.py  models.py  navigation.py  secrets.py  signals.py  tables.py  template_content.py  urls.py  views.py
nautobot_graph/api/: serializers.py  urls.py  views.py
nautobot_graph/graphql/: types.py
nautobot_graph/management/commands/: test_data.py
nautobot_graph/migrations/: 0001_initial.py  0002_auto_20240127_0702.py  0003_auto_20240127_1333.py
nautobot_graph/templates/nautobot_graph/: anotherexamplemodel_retrieve.html  example_with_custom_template.html  home.html  nodelabel_retrieve.html  nodeproperty_retrieve.html  nodetype_retrieve.html  relationshipproperty_retrieve.html  relationshiptype_retrieve.html
nautobot_graph/templates/nautobot_graph/inc/: item_graph_exploration.html
