[metadata]
name = nautobot graph
version = 1.0.0
author = Yannik KADJIE
author_email = yannikkwc@gmail.com
description = A Django plugin for Nautobot that allows users to modify the schema of a graphical database through a web interface.The plugin supports managing node types, node properties, node labels, relationship types, and relationship properties. Data is stored in a PostgreSQL relational database. The plugin provides essential web operations, including creation, modification, deletion, and display of node and relationship types.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/main-c/plugin-nautobot
project_urls =
    Bug Tracker = https://github.com/main-c/plugin-nautobot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include-package-data = True

[options.package_data]
register = py.typed